examples/test/testpolicy7217.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7217
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key25: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value22
          key44: value15
          key34: value20
      podSelector:
        matchLabels:
          key12: value41
          key18: value3
          key3: value15
